# fintech-ledger-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 3476326e47b5_initial_user_model.py  89e5d9edfec3_make_reject_reason_nullable.py  913ed6b0dfda_add_token_purpose.py  a1b0c0cfc97c_create_otp_tokens.py  b2cdd6e8d286_add_wallet_model_and_currency_enum.py  c6c51418ee4a_add_kyc_documents_and_account_tiers.py  e3524d5621ad_add_transaction_and_ledger_entry_models.py  eda40f37f4e1_add_email_verified_to_user.py
src/: main.py
src/api/: dependencies.py  exception_handlers.py  middleware.py
src/api/v1/: admin.py  auth.py  kyc.py  ledger.py  users.py  wallets.py
src/config/: database.py  logger.py  redis.py  security.py  settings.py
src/domain/: enums.py  models.py
src/schemas/: kyc_schemas.py  ledger_schemas.py  pagination_schema.py  user_schemas.py  wallet_schemas.py
src/scripts/: manage.py
src/selectors/: kyc_selectors.py  ledger_selectors.py  user_selectors.py  wallet_selectors.py
src/services/: auth_service.py  kyc_service.py  ledger_service.py  otp_service.py  storage_service.py  user_service.py  wallet_service.py
src/utils/: pagination.py
src/workers/: celery_app.py  tasks.py
